--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,1 +1,27 @@
 <h1>dashboard</h1>
+<h3>Welcome {{name}}</h3>
+<p>Here are your stories </p>
+{{#if stories}}
+    <table class="striped">
+        <thead>
+
+            <tr>
+                <th>Title</th>
+                <th>Date</th>
+                <th>Status</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody >
+            {{#each stories}}
+            <tr>
+                <td><a href="/stories/{{_id}}"></a>{{title}}</td>
+                <td>{{createdAt}}</td>
+                <td><span class="dash-status">{{status}}</span></td>
+            </tr>
+            {{/each}}
+        </tbody>
+    </table>
+{{else}}
+<p>You have no stories add one </p>
+{{/if}}
