--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -15,9 +15,19 @@
         <tbody >
             {{#each stories}}
             <tr>
-                <td><a href="/stories/{{_id}}"></a>{{title}}</td>
-                <td>{{createdAt}}</td>
+                <td><a href="/stories/{{_id}}">{{title}}</a></td>
+                <td>{{ createdAt }}</td>
                 <td><span class="dash-status">{{status}}</span></td>
+               <td>
+
+                <a href="/stories/edit/{{_id}}" class="btn btn-float"><i class="fas fa-edit"></i></a>
+               <form action="/stories/{{_id}}" method="post" id="delete-form">
+               <input type="hidden" name="_method" value="DELETE">
+               <button class="btn red" type="submit">
+                   <i class="fas fa-trash"></i>
+               </button>
+               </form>
+               </td>
             </tr>
             {{/each}}
         </tbody>
