--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,5 +1,5 @@
-<h1>dashboard</h1>
-<h3>Welcome {{name}}</h3>
+<h1>Dashboard</h1>
+<h3>Welcome {{name}} </h3>
 <p>Here are your stories </p>
 {{#if stories}}
     <table class="striped">
@@ -33,5 +33,5 @@
         </tbody>
     </table>
 {{else}}
-<p>You have no stories add one </p>
+<p>You have no stories to see add one </p>
 {{/if}}
